--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
 	<canvas id="tv" width="511" height="351"></canvas>
 	<center class="darken">
 		<img class="logo" src="assets/siglogo.png" alt="Advent"><br>
-		<p class="nonot"><b>Advent</b> is a community based gaming server for all races, genders, etc to come and have a good
-		time without feeling bullied or anything in that nature! This discord was just recently put together and is just now
-		starting to let people join!</p>
-		<p class="nonot">If you are intersted in joining the discord will be at the bottom of this page! Or if your
-		trying to invite someone copy the discord link provied and use that! Or you can make one in the server easier!</p>
-		<p class="nonot">for more information, advent is also hosting community events and tournaments free of charge!
-			this includes tournaments for r6 and fortnite. Or challenges for game like dauntless or csgo!</p>
-		<p class="nonot">Thank you for putting your interest in Advent! We hope to see you join our server!</p>
-		<p class="nonot">Sincerly, xdJustice (Website Designer, Owner)</p>
+		<p class="nonot"><b>Advent</b> <a href="">Shazam</a>
 		<br><br><br>
 		<div style="overflow: hidden; display: flex; justify-content: center;">
 			<a href="https://discord.gg/gKARNeN"><img class="loimg" src="assets/discord.png" alt="Discord"></a>
