--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -15,20 +15,23 @@
 <body>
 	<canvas id="tv" width="511" height="351"></canvas>
 	<center class="darken">
-		<img class="logo" src="assets/siglogo.png" alt="Advent"><br>
-		<p class="nonot"><b>Advent</b> is a community based gaming server for all races, genders, etc to come and have a good
-		time without feeling bullied or anything in that nature! This discord was just recently put together and is just now
-		starting to let people join!</p>
-		<p class="nonot">If you are intersted in joining the discord will be at the bottom of this page! Or if your
-		trying to invite someone copy the discord link provied and use that! Or you can make one in the server easier!</p>
-		<p class="nonot">for more information, advent is also hosting community events and tournaments free of charge!
-			this includes tournaments for r6 and fortnite. Or challenges for game like dauntless or csgo!</p>
-		<p class="nonot">Thank you for putting your interest in Advent! We hope to see you join our server!</p>
-		<p class="nonot">Sincerly, xdJustice (Website Designer, Owner)</p>
-		<br><br><br>
-		<div style="overflow: hidden; display: flex; justify-content: center;">
-			<a href="https://discord.gg/gKARNeN"><img class="loimg" src="assets/discord.png" alt="Discord"></a>
-		</div>
+		<img class="logo" src="assets/siglogo.png" alt="Phoenix Networks"><br>
+        <p class="nonot">----------------------------Welcome to Phoenix Networks!------------------------------</p>
+		<p class="nonot"><b>Phoenix Networks</b> is a New and Upcoming Serious CWRP Server!</p>
+		<p class="nonot">We are attempting to run this server community based so if you are interested
+        if a fun Serious RP Experience and Amazing events in the clone wars era, this is the server for you!
+        <b>Events</b> Will be hosted every hour to 2 hours depending on user feedback.</p>
+        <p class="nonot"><b>Donations</b>
+        will be accepted in forms of <b>Jedi</b> and <b>Custom Classes</b> If you are interested. Donate <a href="">here</a>.
+        To recive the purchased goods, DM A Community Manager or Dev in the discord linked at the bottom of the page.
+        As you do this you are to give you paypal purchase ID or you will be banned and blacklisted for attempted scamming.
+        </p>
+	    <p class="nonot">If you are interested in Staff, Gamemaster, or Commander. The documents for the
+        applications are still being worked on for best user experience. The Docs wil be hosted in the discord
+        and posted on the site when they are done. All staff are going to be tested to there limits to prevent
+        minges and other trolls everyone knows about.</p>
+        <p class="nonot">Site Created by xdJustice</p>
+        <p class="nonot">----------------------------------------Join our <a href="https://discord.gg/ZQ6cb22">Discord</a>--------------------------------------</p>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
