--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
         applications are still being worked on for best user experience. The Docs wil be hosted in the discord
         and posted on the site when they are done. All staff are going to be tested to there limits to prevent
         minges and other trolls everyone knows about.</p>
-        <p class="nonot">Site Created by xdJustice</p>
+        <p class="nonot">Site Created by xdJustice :D</p>
         <p class="nonot">----------------------------------------Join our <a href="https://discord.gg/ZQ6cb22">Discord</a>--------------------------------------</p>
-=======
 		<img class="logo" src="assets/siglogo.png" alt="Advent"><br>
 		<p class="nonot"><b>Advent</b> <a href="">Shazam</a>
 		<br><br><br>
 		<div style="overflow: hidden; display: flex; justify-content: center;">
 			<a href="https://discord.gg/gKARNeN"><img class="loimg" src="assets/discord.png" alt="Discord"></a>
 		</div>
->>>>>>> caa2344a546b3e14c1a61ad7d2118899cc28961a
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
