--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Advent Script Hub</title>
-	<meta name="title" content="Advent Purchase Page">
-	<meta name="description" content="Purchase page for Advent script hub">
+	<meta name="title" content="Phoenix Networks CWRP">
+	<meta name="description" content="Roger Roger!">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<style>
