--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Phoenix Networks</title>
 	<meta name="title" content="Phoenix Networks CWRP">
-	<meta name="description" content="Roger Roger!">
+	<meta name="description" content="Roger Roger nigga!">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<style>
