--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Phoenix Networks</title>
-	<meta name="title" content="Phoenix Networks CWRP">
-	<meta name="description" content="Roger Roger nigga!">
+	<meta name="title" content="Phoenix Networks Clone Wars">
+	<meta name="description" content="Shut up roger roger looking ass. Pop your nigga ass.">
+    <meta name="description" content="Orange buy the fucking imperial rp please." >
+    <meta name="description" content="DM Me if you want your message added here :D">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 	<style>
@@ -32,10 +34,8 @@
         minges and other trolls everyone knows about.</p>
         <p class="nonot">Site Created by xdJustice :D</p>
         <p class="nonot">----------------------------------------Join our <a href="https://discord.gg/ZQ6cb22">Discord</a>--------------------------------------</p>
-		<br><br><br>
-		<div style="overflow: hidden; display: flex; justify-content: center;">
-			<a href="https://discord.gg/gKARNeN"><img class="loimg" src="assets/discord.png" alt="Discord"></a>
-		</div>
+        <p class="nonot">Imperial Coming Soon *Wink* If fucking orange will purchase it. God damn</p>
+		<br>
 	</center>
 	<script type="text/javascript" src="scripts/index.js"></script>
 </body>
